# yb_hackathon_2019

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  pyproject.toml  setup.cfg
backend/apps/: application.py  extensions.py
backend/apps/auth/: hooks.py  schemas.py  views.py
backend/apps/common/: admins.py  blueprints.py  exceptions.py  factories.py  models.py  utils.py  views.py
backend/apps/common/extensions/: socketio.py
backend/apps/detections/: __init__.py  admins.py  date_time_utils.py  enums.py  fix_ros_path.py  gcv_api.py  models.py  object_detection.py  schemas.py  transaction.py  upload_sets.py  urls.py  views.py
backend/apps/games/: __init__.py  admins.py  models.py  schemas.py  upload_sets.py  urls.py  views.py
backend/apps/migrations/versions/: 0e8b04c93d11__introduce_detections_models__20191115_1554.py  112f79c0dd53__add_users_user_is_child_field__20191115_1312.py  3ac614d3736b__add_FK_to_users_user_model_in_transaction__20191115_1558.py  3fb5ab21c9c5__rename_games_answer_is_valid_to_is_correct__20191115_1907.py  447bf2e618da__add_image_to_detections_detection_object__20191116_0010.py  4571e56c6cec__remove_games_question_correct_answer_fk__20191115_1856.py  531bb7ca23fe__add_games_answer_model__20191115_1843.py  (+8 more)
backend/apps/task_app/: tasks.py
backend/apps/users/: admins.py  consumers.py  models.py  routing.py  schemas.py  urls.py  utils.py  views.py
backend/config/settings/: base.py  local.py  test.py
backend/notebooks/: Untitled.ipynb  context.py  google-cloud-vision-api.ipynb  object_detection_notebook.ipynb
(+31 files in other folders)
