[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Łukasz Skarżyński <skarzynski_lukasz@protonmail.com>"]

[tool.poetry.dependencies]
bcrypt = "^3.1"
django-environ = "^0.4.5"
eventlet = "^0.25.1"
flask = "^1.1"
flask-admin = "^1.5"
flask-cors = "^3.0"
flask-jwt-extended = "^3.23"
flask-marshmallow = "^0.10.1"
flask-migrate = "^2.5"
flask-sqlalchemy = "^2.4"
flask-uploads = "^0.2.1"
google-cloud-vision = "^0.40.0"
grpcio = "^1.25"
grpcio-tools = "^1.25"
marshmallow = "^3.2"
marshmallow-sqlalchemy = "^0.19.0"
passlib = "^1.7"
psycopg2-binary = "^2.8"
python = "^3.7"
qrcode = {version = "^6.1", extras = ["pil"]}
sqlalchemy = "^1.3"
sqlalchemy-utils = "^0.34.2"

[tool.poetry.dev-dependencies]
dotenv-linter = "^0.1.4"
factory_boy = "^2.12"
flask-shell-ipython = "^0.4.1"
ipython = "^7.8"
isort = "^4.3"
jupyter = "^1.0"
matplotlib = "^3.1"
opencv-python = "^4.1"
pylama = "^7.7"
pylama-pylint = "^3.1"
pytest = "^5.1"
pytest-factoryboy = "^2.0"
yamllint = "^1.17"
